--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<head />	</head><center><img title="logo" src="./footbutton.png" width="*" height="110" alt="footbutton" id="footbutton" />	<br />
+	<p> Thanks for your interest. </p>
+	<br />
+	<a href="./david-jackson-ui-ux-portfolio.pdf" target="_blank" name="Portfolio" title="Portfolio opens in a new window" >
+	Portfolio </a> formatted 🀱 for screens (landscape)
+  <br />
+  	<a href="./david-jackson-ui-ux-resume.pdf" target="_blank" name="Résumé" title="Résumé opens in a new window" >
+	Résumé</a> formatted 🁣 for paper (portrait)
+  <br  />
+  	<a href="./david-jackson-ui-ux-resume+portfolio.pdf" target="_blank" name="Combined" title="Combined résumé (portrait) and portfolio (landscape) opens in a new window" >
+	Combined</a>
+<br /><br />
+	<p><I> Important: The portfolio contains links to prototypes which are inactive unless the PDF is downloaded. Click on any project to see it on figma:</I></p>
+	<div class="project-links">
+    <a href="https://www.figma.com/make/GDhK18uczzOebHSmpEXwQs/Dog-Directory---Web-Site-%E2%80%93-Hi-Fi?node-id=0-1&t=ZjmWDJKjylZnsG4a-1">Dog Services Site</a>
+    <br />
+    <a href="https://www.figma.com/make/dM7wtfiJlRuM7JJwT1Kx19/Cheese-Finder---Mobile-Site---Hi-Fi?node-id=0-1&t=hVwMFLbeTRUic32x-1">Mobile Cheese Guide</a>
+    <br />
+    <a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1">Gym Buddy Mobile App</a>
+</div>
+	</p>
+</center>
 
