--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 	<p> Thanks for your interest. </p>
 	<br />
+<!--
 	<a href="./david-jackson-ui-ux-portfolio.pdf" target="_blank" name="Portfolio" title="Portfolio opens in a new window" >
 	Portfolio </a> formatted 🀱 for screens (landscape)
   <br />
@@ -10,8 +11,9 @@
   <br  />
   	<a href="./david-jackson-ui-ux-resume+portfolio.pdf" target="_blank" name="Combined" title="Combined résumé (portrait) and portfolio (landscape) opens in a new window" >
 	Combined</a>
-<br /><br />
-	<p><I> Important: The portfolio contains links to prototypes which are inactive unless the PDF is downloaded. Click on any project to see it on figma:</I></p>
+<br />
+--><br />
+	<p><I> Note: Interactive links within the embedded PDF may be disabled by your browser's security settings. Click on any project to see it on figma:</I></p>
 	<div class="project-links">
     <a href="https://www.figma.com/make/GDhK18uczzOebHSmpEXwQs/Dog-Directory---Web-Site-%E2%80%93-Hi-Fi?node-id=0-1&t=ZjmWDJKjylZnsG4a-1">Dog Services Site</a>
     <br />
@@ -20,4 +22,19 @@
     <a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1">Gym Buddy Mobile App</a>
 </div>
 	</p>
+<div style="text-align: center; margin: 40px auto; max-width: 900px;">
+
+    <iframe
+        src="david-jackson-ui-ux-portfolio.pdf"
+        width="100%"
+        height="1000px"
+        style="border: none;"
+    >
+        <p>Your browser does not support embedded PDFs. <a href="./david-jackson-ui-ux-portfolio.pdf">Click here to download the file.</a></p>
+    </iframe>
+
+    <p style="margin-top: 15px;">
+    
+    </p>
+</div>
 
