--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head />	</head><center><img title="logo" src="./footbutton.png" width="*" height="110" alt="footbutton" id="footbutton" />	<br /></center>
-
+<div style="text-align: center; margin: 40px auto; max-width: 900px;">
 	<p> Thanks for your interest. </p>
 	<br />
 <br />
@@ -26,4 +26,4 @@
     <br />
     <a href="https://www.figma.com/make/dM7wtfiJlRuM7JJwT1Kx19/Cheese-Finder---Mobile-Site---Hi-Fi?node-id=0-1&t=hVwMFLbeTRUic32x-1">Mobile Cheese Guide</a>
     <br />
-    <a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1">Gym Buddy Mobile App</a></div></p>
+    <a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1">Gym Buddy Mobile App</a></div></p></div>
