--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<head />	</head><center><img title="logo" src="./footbutton.png" width="*" height="110" alt="footbutton" id="footbutton" />	<br /></center>
+<head />	</head><center>
+	<!--
+	<img title="logo" src="./footbutton.png" width="*" height="110" alt="footbutton" id="footbutton" />	<br /></center>
 <div style="text-align: center; margin: 40px auto; max-width: 900px;">
+	
 	<p> Thanks for your interest. </p>
 	<br />
 <br />
-	
+	-->
 </div>
 	</p>
 <div style="text-align: center; margin: 40px auto; max-width: 900px;">
