--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head />	</head><center>
+<head />	</head>
 	<!--
 	<img title="logo" src="./footbutton.png" width="*" height="110" alt="footbutton" id="footbutton" />	<br /></center>
 <div style="text-align: center; margin: 40px auto; max-width: 900px;">
