--- a/page1.html
+++ b/page1.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start - David Jackson Portfolio </title>
+    <title>Page 1 - Trajectory </title>
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <main class="page-container" id="page-x">
+    <main class="page-container" id="page-1">
         
         <div class="image-wrapper">
             <img 
-                src="pageX_hr.png" 
-                alt="Full page image for Index" 
+                src="page1_hr.png" 
+                alt="Full page image for Page 1" 
                 style="width: 792px; height: 612px;"
             >
              <div class="navigation">
         </div>
              <div class="navigation">
-              <a href="page1.html" class="next-page-link">Next page</a>
-            <a href="page1.html" class="next-page-link">Next page</a>
+             <a href="index.html" class="prev-page-link">Back</a>
+            <a href="page2.html" class="next-page-link">Next page</a>
         </div>
         </div>
         
