--- a/page6.html
+++ b/page6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 6 - Solution </title>
+    <title>Page 6 - Cheese Finder </title>
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
