--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 1 - Trajectory </title>
+    <title>Graphic Designer Pursuing UI/UX </title>
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
@@ -19,7 +19,7 @@
         </div>
              <div class="navigation">
              <a href="index.html" class="prev-page-link">Back</a>
-            <a href="page2.html" class="next-page-link">Next page</a>
+            <a href="case-study-dog-services.html" class="next-page-link">Next page</a>
         </div>
         </div>
         
