--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="keywords" content="UI Designer, UX Designer, Product Designer, Portfolio, Figma, Prototyping, Visual Design, Information Architecture, IA, Mobile App, Intel, Google">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>David Jackson UI/UX Portfolio </title>
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
@@ -20,11 +23,12 @@
              <div class="navigation">
         </div>
              <div class="navigation">
-              <a href="page1.html" class="next-page-link">Next page</a>
-            <a href="page1.html" class="next-page-link">Next page</a>
+              <a href="trajectory.html" class="next-page-link">Next page</a>
+            <a href="trajectory.html" class="next-page-link">Next page</a>
         </div>
         </div>
         
         </main>
 </body>
+
 </html>
