--- a/case-study-dog-results.html
+++ b/case-study-dog-results.html
@@ -23,7 +23,7 @@
                 <img src="demo_button.png" alt="View Dog Directory">
             </a>
               <div class="navigation">
-              <a href="case-study-dog-services.html" class="prev-page-link">Back</a>
+              <a href="case-study-dog-browser.html" class="prev-page-link">Back</a>
             <a href="case-study-cheese-discovery.html" class="next-page-link">Next page</a>
         </div>
         </div>
