--- a/case-study-dog-results.html
+++ b/case-study-dog-results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Study: Dog Search Results</title>
+    <title>Case Study: Dog Resources with Figma Prototype</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
