--- a/case-study-cheese-results.html
+++ b/case-study-cheese-results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Case Study: Cheese Results</title>
+    <title>Case Study: Cheese Cards with Figma Prototype</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
