--- a/case-study-cheese-discovery.html
+++ b/case-study-cheese-discovery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Study: Cheese Discovery </title>
+    <title>Case Study: Cheese Discovery Guide</title>
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
