--- a/more-ui.html
+++ b/more-ui.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>More User Interfaces with Figma prototype</title>
+    <title>More User Interfaces with Figma demo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
