--- a/case-study-dog-results.html
+++ b/case-study-dog-results.html
@@ -19,9 +19,11 @@
         </div>
 
         <div class="action-button-wrapper">
+            <div class="button-anchor">
             <a href="https://www.figma.com/make/GDhK18uczzOebHSmpEXwQs/Dog-Directory---Web-Site-%E2%80%93-Hi-Fi?node-id=0-1&t=ZjmWDJKjylZnsG4a-1" target="_blank" class="custom-graphic-button">
                 <img src="demo_button.png" alt="View Dog Directory">
             </a>
+            </div>
               <div class="navigation">
               <a href="case-study-dog-browser.html" class="prev-page-link">Back</a>
             <a href="case-study-cheese-discovery.html" class="next-page-link">Next page</a>
