--- a/case-study-cheese-results.html
+++ b/case-study-cheese-results.html
@@ -12,20 +12,21 @@
     <main class="page-container" id="page-7">
         
         <div class="image-wrapper">
+                        <div class="button-anchor">
+
             <img 
                 src="page7_hr.png" 
                 data-high-res="page7_hr.png" 
                 alt="Full page image for Page 7" 
                 style="width: 792px; height: 612px;"
             >
-        </div>
 
         <div class="action-button-wrapper">
-            <div class="button-anchor">
             <a href="https://www.figma.com/make/dM7wtfiJlRuM7JJwT1Kx19/Cheese-Finder---Mobile-Site---Hi-Fi?node-id=0-1&t=hVwMFLbeTRUic32x-1" target="_blank" class="custom-graphic-button">
                 <img src="demo_button.png" alt="View Cheese Finder">
             </a>
-            </div>
+            </div>        </div>
+
               <div class="navigation">
               <a href="case-study-cheese-finder.html" class="prev-page-link">Back</a>
             <a href="more-ui.html" class="next-page-link">Next page</a>
