--- a/more-ui.html
+++ b/more-ui.html
@@ -10,20 +10,21 @@
     <main class="page-container" id="page-8">
         
         <div class="image-wrapper">
+                        <div class="button-anchor">
+
             <img 
                 src="page8_hr.png" 
                 data-high-res="page8_hr.png" 
                 alt="Full page image for Page 8" 
                 style="width: 792px; height: 612px;"
             >
-        </div>
 
         <div class="action-button-wrapper">
-            <div class="button-anchor">
             <a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1" target="_blank" class="custom-graphic-button">
                 <img src="demo_button.png" alt="View Gym Buddy">
             </a>
-            </div>
+            </div>        </div>
+
               <div class="navigation">
               <a href="case-study-cheese-results.html" class="prev-page-link">Back</a>
             <a href="contact.html" class="next-page-link">Next page</a>
