--- a/case-study-dog-results.html
+++ b/case-study-dog-results.html
@@ -22,7 +22,7 @@
         <div class="action-button-wrapper">
             
             <a href="https://www.figma.com/make/GDhK18uczzOebHSmpEXwQs/Dog-Directory---Web-Site-%E2%80%93-Hi-Fi?node-id=0-1&t=ZjmWDJKjylZnsG4a-1" target="_blank" class="custom-graphic-button">
-                <img src="demo_button.png" alt="View Dog Directory">
+                <img src="demo_button.png" alt="View Bowser Browser">
             </a>
             </div>  </div>
               <div class="navigation">
