--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
              <div class="navigation">
         </div>
              <div class="navigation">
-              <a href="trajectory.html" class="next-page-link">Next page</a>
+              <a href="https://github.com/david-jackson-dotcom/my-ux-portfolio/blob/main/david-jackson-ui-ux-portfolio.pdf" class="next-page-link">Get the PDF</a>
             <a href="trajectory.html" class="next-page-link">Next page</a>
         </div>
         </div>
