--- a/more-ui.html
+++ b/more-ui.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More User Interfaces with Figma demo</title>
@@ -8,27 +9,24 @@
 </head>
 <body>
     <main class="page-container" id="page-8">
-        
         <div class="image-wrapper">
-                        <div class="button-anchor">
-
+            <div class="button-anchor">
             <img 
                 src="page8_hr.png" 
                 data-high-res="page8_hr.png" 
                 alt="Full page image for Page 8" 
                 style="width: 792px; height: 612px;"
             >
-
         <div class="action-button-wrapper">
             <a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1" target="_blank" class="custom-graphic-button">
                 <img src="demo_button.png" alt="View Gym Buddy">
             </a>
-            </div>        </div>
-
-              <div class="navigation">
+            </div>
+        </div>
+            <div class="navigation">
               <a href="case-study-cheese-results.html" class="prev-page-link">Back</a>
             <a href="contact.html" class="next-page-link">Next page</a>
-        </div>
+            </div>
         </div>
     </main>
 </body>
