--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,7 @@
             <img 
                 src="page9_hr.png" 
                 alt="Full page image for Page 9" 
-                style="width: 792px; height: 612px;"
-            >
+                style="width: 792px; height: 612px;">
         </div>  
         <div class="navigation">
                 <a href="more-ui.html" class="prev-page-link">Back</a>
