--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
             <a href="more-ui.html" class="prev-page-link">Back</a>
             <a href="index.html" class="next-page-link">Start Over</a>
         </div>
+    </div>
     </main>
 </body>
 </html>
