--- a/contact.html
+++ b/contact.html
@@ -12,13 +12,13 @@
             <img 
                 src="page9_hr.png" 
                 alt="Full page image for Page 9" 
-                style="width: 792px; height: 612px;">
+                style="width: 792px; height: 612px;"
+                class="full-page-image">
         </div>  
         <div class="navigation">
             <a href="more-ui.html" class="prev-page-link">Back</a>
             <a href="index.html" class="next-page-link">Start Over</a>
         </div>
-    </div>
     </main>
 </body>
 </html>
