--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,13 @@
 <body>
     <main class="page-container" id="page-9"> 
         <div class="image-wrapper">
+            <a href="mailto:getjackson@gmail.com">
             <img 
                 src="page9_hr.png" 
                 alt="Full page image for Page 9" 
                 style="width: 792px; height: 612px;"
                 class="full-page-image">
+            </a>
         </div>  
         <div class="navigation">
             <a href="more-ui.html" class="prev-page-link">Back</a>
