--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <main class="page-container" id="page-9"> 
+        <!-- The navigation buttons are positioned absolutely relative to this main container -->
+        
         <div class="image-wrapper">
+            <!-- New: The entire image is now a clickable mailto link -->
             <a href="mailto:getjackson@gmail.com">
-            <img 
-                src="page9_hr.png" 
-                alt="Full page image for Page 9" 
-                style="width: 792px; height: 612px;"
-                class="full-page-image">
+                <img 
+                    src="page9_hr.png" 
+                    alt="Full page image for Page 9" 
+                    class="full-page-image">
+                <!-- Clean-up: Removed redundant inline style 'width: 792px; height: 612px;' -->
             </a>
-        </div>  
+        </div> 
+        
         <div class="navigation">
             <a href="more-ui.html" class="prev-page-link">Back</a>
             <a href="index.html" class="next-page-link">Start Over</a>
