--- a/case-study-cheese-results.html
+++ b/case-study-cheese-results.html
@@ -37,7 +37,7 @@
             >
 
         <div class="action-button-wrapper">
-            <a href="https://www.figma.com/make/dM7wtfiJlRuM7JJwT1Kx19/Cheese-Finder---Mobile-Site---Hi-Fi?node-id=0-1&t=hVwMFLbeTRUic32x-1" target="_blank" class="custom-graphic-button">
+            <a href="https://www.figma.com/make/W1lM5sj0SRoZ16x5ZW0IWY/Cheese-Finder---Mobile-Site---Hi-Fi?t=D1FDyP6IGUOx8BG6-6" target="_blank" class="custom-graphic-button">
                 <img src="demo_button.png" alt="View Cheese Finder">
             </a>
             </div>        </div>
