--- a/case-study-cheese-results.html
+++ b/case-study-cheese-results.html
@@ -44,6 +44,7 @@
 
               <div class="navigation">
               <a href="case-study-cheese-finder.html" class="prev-page-link">Back</a>
+                  <a href="https://bit.ly/cheese-finder-beta">Live</a>
             <a href="more-ui.html" class="next-page-link">Next page</a>
         </div>
         </div>
