--- a/case-study-cheese-results.html
+++ b/case-study-cheese-results.html
@@ -44,7 +44,7 @@
 
               <div class="navigation">
               <a href="case-study-cheese-finder.html" class="prev-page-link">Back</a>
-                  <a href="hhttps://david-jackson-dotcom.github.io/cheese-finder-beta/" class="next-page-link">Live App</a>
+                  <a href="hhttps://david-jackson-dotcom.github.io/cheese-finder-beta/" class="app-link">Live App</a>
             <a href="more-ui.html" class="next-page-link">Next page</a>
         </div>
         </div>
