reworked html, css

--- a/case-study-cheese-discovery.html
+++ b/case-study-cheese-discovery.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <title>Case Study: Cheese Discovery Guide</title>
-    <link rel="stylesheet" href="style.css">
-    </head>
-<body>
-    <main class="page-container" id="page-5">        
-        <div class="image-wrapper">
-            <img 
-                src="page5_hr.png" 
-                alt="Full page image for Page 5" 
-                style="width: 792px; height: 612px;"
-            >    
-             <div class="navigation">
-             <a href="case-study-dog-results.html" class="prev-page-link">Back</a>
-            <a href="case-study-cheese-finder.html" class="next-page-link">Next page</a>
-        </div>
-        </div>        
-        </main>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
+		<title>
+			Case Study: Cheese Discovery App </title>
+		</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<main class="page-container" id="page-5">
+				<div class="image-wrapper">
+				<div class="content-focus"> 
+				<div class="image-wrapper">
+					<img 
+					src="page5_hr.png" 
+					alt="Full page image for Page 5" 
+					style="width: 792px; height: 612px;">
+				</div>
+				<div class="navigation">
+					 <a href="case-study-dog-results.html" class="prev-page-link">Back</a>
+					<a href="case-study-cheese-finder.html" class="next-page-link">Next page</a>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
