--- a/case-study-cheese-discovery.html
+++ b/case-study-cheese-discovery.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
 		<title>
-			Case Study: Cheese Discovery App </title>
+			Case Study: Cheese Discovery App
 		</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
@@ -20,8 +20,8 @@
 					style="width: 792px; height: 612px;">
 				</div>
 				<div class="navigation">
-					 <a href="case-study-dog-results.html" class="prev-page-link">Back</a>
-					<a href="case-study-cheese-finder.html" class="next-page-link">Next page</a>
+					 <a href="case-study-dog-results.html" class="prev-page-link">< Bowser Browser</a>
+					<a href="case-study-cheese-finder.html" class="next-page-link">Solution ></a>
 				</div>
 			</div>
 		</main>
