--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
 		<title>
-		Contact David Jackson
+			Contact David Jackson
 		</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
@@ -13,14 +13,16 @@
 		<main class="page-container" id="page-9">
 			<div class="content-focus"> 
 				<div class="image-wrapper">
-					<img 
-					src="page9_hr.png" 
-					alt="Full page image for Page 9" 
-					style="width: 792px; height: 612px;" />
+					<a href="mailto:getjackson@gmail.com?subject=Hello!">
+						<img 
+						src="page9_hr.png" 
+						alt="Full page image for Page 9" 
+						style="width: 792px; height: 612px;" />
+					</a>
 				</div> 
 				<div class="navigation">
-					<a href="more-ui.html" class="prev-page-link">Back</a>
-					<a href="index.html" class="next-page-link">Start Over</a>
+					<a href="more-ui.html" class="prev-page-link">< More UI</a>
+					<a href="index.html" class="next-page-link">Restart ></a>
 				</div>
 			</div>
 		</main>
