--- a/more-ui.html
+++ b/more-ui.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
-			<title>
-				More User Interfaces
-			</title>
+		<title>
+			More User Interfaces
+		</title>
     	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
@@ -20,9 +20,9 @@
 					style="width: 792px; height: 612px;" />
 				</div>
 				<div class="navigation">
-					<a href="case-study-cheese-results.html" class="prev-page-link">Back</a>
+					<a href="case-study-cheese-results.html" class="prev-page-link">< Cheese Finder</a>
 					<a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1" target="_blank" class="app-link">Prototype</a>
-					<a href="contact.html" class="next-page-link">Next page</a>
+					<a href="contact.html" class="next-page-link">Contact ></a>
 				</div>
 			</div>
 		</main>
