--- a/case-study-cheese-finder.html
+++ b/case-study-cheese-finder.html
@@ -19,8 +19,8 @@
 					style="width: 792px; height: 612px;" />
 				</div>
 				<div class="navigation">
-					<a href="case-study-cheese-discovery.html" class="prev-page-link">Back</a>
-					<a href="case-study-cheese-results.html" class="next-page-link">Next page</a>
+					<a href="case-study-cheese-discovery.html" class="prev-page-link">< User need</a>
+					<a href="case-study-cheese-results.html" class="next-page-link">Details ></a>
 				</div>
 			</div>
 		</main>
