--- a/case-study-dog-results.html
+++ b/case-study-dog-results.html
@@ -22,9 +22,9 @@
 					</a>	
 				</div>
 				<div class="navigation">
-					<a href="case-study-dog-services.html" class="prev-page-link">Back</a>
+					<a href="case-study-dog-browser.html" class="prev-page-link">< Solution</a>
 					<a href="https://www.figma.com/make/GDhK18uczzOebHSmpEXwQs/Dog-Directory---Web-Site-%E2%80%93-Hi-Fi?node-id=0-1&t=xnWnVxyjBcoeVodn-1" class="app-link" target="_blank">Prototype</a>
-					<a href="case-study-cheese-discovery.html" class="next-page-link">Next page</a>
+					<a href="case-study-cheese-discovery.html" class="next-page-link">Case study ></a>
 				</div>
 			</div>
 		</main>
