--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					class="full-page-image" /> 
 				</div>
 				<div class="navigation"> 
-					<a href="trajectory.html" class="next-page-link">Next page</a>
-					<a href="trajectory.html" class="next-page-link">Next page</a>
+					<a href="mailto:getjackson@gmail.com?subject=Hello!" class="next-page-link">Contact</a>
+					<a href="trajectory.html" class="next-page-link">Trajectory ></a>
 				</div>
 			</div>
 		</main>
