--- a/more-ui.html
+++ b/more-ui.html
@@ -20,9 +20,9 @@
 					style="width: 792px; height: 612px;" />
 				</div>
 				<div class="navigation">
-					<a href="case-study-cheese-results.html" class="prev-page-link">< Cheese Finder</a>
+					<a href="case-study-cheese-results.html" class="prev-page-link">◀️ Cheese Finder</a>
 					<a href="https://www.figma.com/make/PQblht9qWOzFCWiZC75FMx/Gym-Buddy----Mobile-App---Hi-Fi?node-id=0-1&t=pID2vyYEyQ8FtdCo-1" target="_blank" class="app-link">Prototype</a>
-					<a href="contact.html" class="next-page-link">Contact ></a>
+					<a href="contact.html" class="next-page-link">Contact ▶️</a>
 				</div>
 			</div>
 		</main>
