--- a/case-study-cheese-results.html
+++ b/case-study-cheese-results.html
@@ -22,7 +22,7 @@
 				</a>
 				</div>
 				<div class="navigation">
-				  	<a href="case-study-cheese-finder.html" class="prev-page-link"><◀️ Solution</a>
+				  	<a href="case-study-cheese-finder.html" class="prev-page-link">◀️ Solution</a>
 				  					  	<a href="https://www.figma.com/make/W1lM5sj0SRoZ16x5ZW0IWY/Cheese-Finder---Mobile-Site---Hi-Fi?node-id=0-1&t=QluSTZD55ad7GRVL-1" target="_blank" class="app-link">Prototype</a>
 				  	<a href="https://david-jackson-dotcom.github.io/cheese-finder-beta/" target="_blank" class="app-link">Live app</a>
 					<a href="more-ui.html" class="next-page-link">More UI ▶️</a>
