--- a/case-study-dog-browser.html
+++ b/case-study-dog-browser.html
@@ -19,7 +19,7 @@
 					style="width: 792px; height: 612px;" />
 				</div>
 				<div class="navigation">
-					<a href="case-study-dog-services.html" class="prev-page-link"><◀️ User need</a>
+					<a href="case-study-dog-services.html" class="prev-page-link">◀️ User need</a>
 					<a href="case-study-dog-results.html" class="next-page-link">Details ▶️</a>
 				</div>
 			</div>
