--- a/case-study-cheese-discovery.html
+++ b/case-study-cheese-discovery.html
@@ -20,7 +20,7 @@
 					style="width: 792px; height: 612px;">
 				</div>
 				<div class="navigation">
-					 <a href="case-study-dog-results.html" class="prev-page-link">◀️ Bowser Browser</a>
+					 <a href="case-study-dog-results.html" class="prev-page-link">◀️ Dog Resourcer</a>
 					<a href="case-study-cheese-finder.html" class="next-page-link">Solution ▶️</a>
 				</div>
 			</div>
