--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 					class="full-page-image" /> 
 				</div>
 				<div class="navigation"> 
-					<!-- <a href="mailto:getjackson@gmail.com?subject=Hello!" class="next-page-link">✉️ Contact</a>
-					<a href="trajectory.html" class="next-page-link">Trajectory ▶️</a> -->
+					<a href="mailto:getjackson@gmail.com?subject=Hello!" class="next-page-link">✉️ Contact</a>
+					<a href="trajectory.html" class="next-page-link">Trajectory ▶️</a>
 
-    				<a href="mailto:getjackson@gmail.com?subject=Hello!" class="next-page-link"><span class="emoji-fix">✉️</span> Contact</a>
-   					<a href="trajectory.html" class="next-page-link">Trajectory <span class="emoji-fix">▶️</span></a>
+    				<!-- <a href="mailto:getjackson@gmail.com?subject=Hello!" class="next-page-link"><span class="emoji-fix">✉️</span> Contact</a>
+   					<a href="trajectory.html" class="next-page-link">Trajectory <span class="emoji-fix">▶️</span></a> -->
 				</div>
 			</div>
 		</main>
