--- a/case-study-cheese-discovery.html
+++ b/case-study-cheese-discovery.html
@@ -20,8 +20,8 @@
 					style="width: 792px; height: 612px;">
 				</div>
 				<div class="navigation">
-					 <a href="case-study-dog-results.html" class="prev-page-link">◀️ Dog Resourcer</a>
-					<a href="case-study-cheese-finder.html" class="next-page-link">Solution ▶️</a>
+					 <a href="case-study-dog-results.html" class="prev-page-link"><span className="text-red">❮</span> Dog Resourcer</a>
+					<a href="case-study-cheese-finder.html" class="next-page-link">Solution <span className="text-red">❯</span></a>
 				</div>
 			</div>
 		</main>
