Fix navigation link class attribute syntax

--- a/case-study-cheese-discovery.html
+++ b/case-study-cheese-discovery.html
@@ -20,8 +20,8 @@
 					style="width: 792px; height: 612px;">
 				</div>
 				<div class="navigation">
-					 <a href="case-study-dog-results.html" class="prev-page-link"><span class="text-red">❮ </span> Dog Resourcer</a>
-					<a href="case-study-cheese-finder.html" class="next-page-link">Solution <span class="text-red"> ❯</span></a>
+					 <a href="case-study-dog-results.html" class="prev-page-link"><span !class="text-red">❮ </span> Dog Resourcer</a>
+					<a href="case-study-cheese-finder.html" class="next-page-link">Solution <span !class="text-red"> ❯</span></a>
 				</div>
 			</div>
 		</main>
