--- a/case-study-dog-services.html
+++ b/case-study-dog-services.html
@@ -19,8 +19,8 @@
 					style="width: 792px; height: 612px;" />
 				</div>
 				<div class="navigation">
-					<a href="trajectory.html" class="prev-page-link">◀️ Trajectory</a>
-					<a href="case-study-dog-browser.html" class="next-page-link">Solution ▶️</a>
+					<a href="trajectory.html" class="prev-page-link">❮ Trajectory</a>
+					<a href="case-study-dog-browser.html" class="next-page-link">Solution ❯</a>
 				</div>
 			</div>
 		</main>
