--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@
 					</a>
 				</div> 
 				<div class="navigation">
-					<a href="more-ui.html" class="prev-page-link">◀️ More UI</a>
-					<a href="index.html" class="next-page-link">Restart ⏪</a>
+					<a href="more-ui.html" class="prev-page-link">❮ More UI</a>
+					<a href="index.html" class="next-page-link">Restart ❮❮</a>
 				</div>
 			</div>
 		</main>
