--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					class="full-page-image" /> 
 				</div>
 				<div class="navigation"> 
-					<a href="mailto:getjackson@gmail.com?subject=Hello!" class="next-page-link">@ Contact</a>
+					<a href="mailto:creative.animal@icloud.com?subject=Hello!" class="next-page-link">@ Contact</a>
 					<a href="trajectory.html" class="next-page-link">Trajectory ❯</a>
 				</div>
 			</div>
